--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>To do list - js</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="css/form.css" rel="stylesheet">
+    <link href="css/task.css" rel="stylesheet">
+    <link href="css/buttons.css" rel="stylesheet">
+    <link href="css/section.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,7 +37,10 @@
             </div>
         </section>
         <section class="section">
-            <h2 class="section__title">Lista zadań</h2>
+            <header class="section__header">
+                <h2 class="section__title">Lista zadań</h2>
+                <div class="buttons js-buttons"></div>
+            </header>
             <div class="section__body">
                 <ul class="tasks js-tasks"></ul>
             </div>
